sort.basic.lessons.sort.basic.bubble.AlgBubbleSort3.scala.error
AlgBubbleSort3:16: error: ';' expected but 'if' found.
}if (trié==false) {return}
 ^